--- a/finalProject/Base.lproj/Main.storyboard
+++ b/finalProject/Base.lproj/Main.storyboard
@@ -92,7 +92,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="4Sh-og-DRh">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" id="4Sh-og-DRh">
                                 <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4Sh-og-DRh" id="Ivq-6W-RLe">
@@ -114,10 +114,10 @@
             </objects>
             <point key="canvasLocation" x="1776.8115942028987" y="66.964285714285708"/>
         </scene>
-        <!--Mental Health Todo-->
+        <!--NavPage-->
         <scene sceneID="REN-En-UtX">
             <objects>
-                <navigationController title="Mental Health Todo" automaticallyAdjustsScrollViewInsets="NO" id="Zse-Ea-m6Q" sceneMemberID="viewController">
+                <navigationController title="NavPage" automaticallyAdjustsScrollViewInsets="NO" id="Zse-Ea-m6Q" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="O0B-Qg-OnL"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="cni-Za-EjT">
