--- a/finalProject/Base.lproj/Main.storyboard
+++ b/finalProject/Base.lproj/Main.storyboard
@@ -145,7 +145,7 @@
         <!--Mental Health Todos-->
         <scene sceneID="fO8-mI-4Ka">
             <objects>
-                <tableViewController title="Mental Health Todos" id="tgH-TT-v3G" customClass="TodoTableViewController" customModule="finalProject" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Mental Health Todos" id="tgH-TT-v3G" customClass="TaskLTableViewController" customModule="finalProject" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="bwc-ph-QMh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
